i can haz graphics

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </div>
           <h1>Plain White Tees</h1>
        </div> 
+        
+        <div id="bringYourOwn"><img src="img/bringYourOwn.svg" alt="Bring your own white tee"></div>
+        <div id="drinks"><img src="img/drinks.svg" alt= "Drinks from 99p"></div>
+        <div id="pens"><img src= "img/pens.svg" alt= "pens provided"></div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
