--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div id="bringYourOwn"><img src="img/bringYourOwn.svg" alt="Bring your own white tee"></div>
         <div id="drinks"><img src="img/drinks.svg" alt= "Drinks from 99p"></div>
         <div id="pens"><img src= "img/pens.svg" alt= "pens provided"></div>
+        
+        <div id="logos">
+            <img src="img/fundraiser.svg" alt="fundraiser">
+            <img src="img/union.svg" alt="The Union logo">
+            <img src="img/mono.svg" alt="mono logo">        
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
