--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-      <div class="wrap">  
+      <div class="wrap"> 
+           <div class="unionLogos">
+            <img src="img/fundraiser.svg" alt="fundraiser">
+            <img src="img/union.svg" alt="The Union logo">
+            <img src="img/mono.svg" alt="mono logo">        
+        </div>
         <div class="logo">
             <img src="img/pwt-logo.svg" alt="Plain White Tees logo">
         </div>
@@ -27,11 +32,7 @@
         <div id="drinks"><img src="img/drinks.svg" alt= "Drinks from 99p"></div>
         <div id="pens"><img src= "img/pens.svg" alt= "pens provided"></div>
         
-        <div id="logos">
-            <img src="img/fundraiser.svg" alt="fundraiser">
-            <img src="img/union.svg" alt="The Union logo">
-            <img src="img/mono.svg" alt="mono logo">        
-        </div>
+       
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
