fittext for date

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="date">
                              <img class="bannerLeft" src="img/bannerLeft.svg">
                             <h2>
-                                <span class="star">&#9733;</span>Thursday 7th November
+                                <span class="star">&#9733;</span>Thursday 7th November<span class="star">&#9733;</span>
                                 <span class="star">&#9733;</span>11pm - 2:30am
                                 <span class="star">&#9733;</span>
                             </h2>
