--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                             </h2>
                             <img class="bannerRight" src="img/bannerRight.svg">
                         </div>
+                        <div class="djs">
+                            <h5>with DJ sets from</h5>
+                            <h2>P-Change &amp; Jonny Leslie</h2>
+                        </div>
                     </div>
                     <div class="graphic" id="bringYourOwn">
                         <a href="#what">
