--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <title>Plain White Tees: 07/10/2013</title>
                     <meta name="description" content="">
                     <meta name="viewport" content="width=device-width">
+                    <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
                     <link rel="stylesheet" href="style.css">
                     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
                 </head>
