--- a/index.html
+++ b/index.html
@@ -83,12 +83,18 @@
                         </a>
                     </div>
                     <div class="content">
+                        <div class="explanation">
                         <h3 id="what">What is plain white tees?</h3>
                         <p>draw on pals etc</p>
+                            </div>
+                        <div class="explanation">
                         <h3 id="drinksText">Bargain Prices</h3>
                         <p>Same cheap drinks prices you expect from the Union.</p>
+                            </div>
+                            <div class="explanation">
                         <h3 id="pensText">Pens Provided</h3>
                         <p>We'll have pens for you to draw on your pals.</p>
+                                </div>
                     </div>
                     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
                     <script>
