--- a/index.html
+++ b/index.html
@@ -26,57 +26,61 @@
                 
                 <body>
                     <div class="wrap">
-                        <div class="unionLogos">
-                            <img src="img/fundraiser.svg" alt="fundraiser">
-                            <img src="img/union.svg" alt="The Union logo">
-                            <img src="img/mono.svg" alt="mono logo">
-                        </div>
-                        <div class="logo">
-                            <img src="img/pwt-logo.svg" alt="Plain White Tees logo">
-                        </div>
-                        <div id="countdown"></div>
-                        <div class="date">
-                            <img class="bannerLeft" src="img/bannerLeft.svg">
-                            <h2>
-                                <span class="star">&#9733;</span>Thursday 7th November
-                                <span class="star">&#9733;</span>
-                                <span class="star">&#9733;</span>11pm - 2:30am
-                                <span class="star">&#9733;</span>
-                            </h2>
-                            <img class="bannerRight" src="img/bannerRight.svg">
-                        </div>
-                        <div class="djs">
-                            <h5>with DJ sets from</h5>
-                            <h2>P-Change &amp; Jonny Leslie</h2>
+                        <div class="tophalf">
+                            <div class="unionLogos">
+                                <img src="img/fundraiser.svg" alt="fundraiser">
+                                <img src="img/union.svg" alt="The Union logo">
+                                <img src="img/mono.svg" alt="mono logo">
+                            </div>
+                            <div class="logo">
+                                <img src="img/pwt-logo.svg" alt="Plain White Tees logo">
+                            </div>
+                            <div id="countdown"></div>
+                            <div class="date">
+                                <img class="bannerLeft" src="img/bannerLeft.svg">
+                                <h2>
+                                    <span class="star">&#9733;</span>Thursday 7th November
+                                    <span class="star">&#9733;</span>
+                                    <span class="star">&#9733;</span>11pm - 2:30am
+                                    <span class="star">&#9733;</span>
+                                </h2>
+                                <img class="bannerRight" src="img/bannerRight.svg">
+                            </div>
+                            <div class="djs">
+                                <h5>with DJ sets from</h5>
+                                <h2>P-Change &amp; Jonny Leslie</h2>
+                            </div>
                         </div>
                     </div>
-                    <div class="graphic" id="bringYourOwn">
-                        <a href="#what">
-                            <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
-                            <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
-                            <img class="bannerLeft" src="img/bannerLeft.svg">
-                            <h4>Tickets £3 in advance
-                                <br>£4 on the door</h4>
-                            <img class="bannerRight" src="img/bannerRight.svg">
-                        </a>
-                    </div>
-                    <div class="graphic" id="drinks">
-                        <a href="#drinksText">
-                            <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
-                            <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
-                            <img class="bannerLeft" src="img/bannerLeft.svg">
-                            <h4>Drinks from 99p</h4>
-                            <img class="bannerRight" src="img/bannerRight.svg">
-                        </a>
-                    </div>
-                    <div class="graphic" id="pens">
-                        <a href="#pensText">
-                            <img class="normal" src="img/pens.svg" alt="pens provided">
-                            <img class="hover" src="img/pensHover.svg" alt="pens provided">
-                            <img class="bannerLeft" src="img/bannerLeft.svg">
-                            <h4>Pens provided</h4>
-                            <img class="bannerRight" src="img/bannerRight.svg">
-                        </a>
+                    <div class="graphics">
+                        <div class="graphic" id="bringYourOwn">
+                            <a href="#what">
+                                <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
+                                <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
+                                <img class="bannerLeft" src="img/bannerLeft.svg">
+                                <h4>Tickets £3 in advance
+                                    <br>£4 on the door</h4>
+                                <img class="bannerRight" src="img/bannerRight.svg">
+                            </a>
+                        </div>
+                        <div class="graphic" id="drinks">
+                            <a href="#drinksText">
+                                <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
+                                <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
+                                <img class="bannerLeft" src="img/bannerLeft.svg">
+                                <h4>Drinks from 99p</h4>
+                                <img class="bannerRight" src="img/bannerRight.svg">
+                            </a>
+                        </div>
+                        <div class="graphic" id="pens">
+                            <a href="#pensText">
+                                <img class="normal" src="img/pens.svg" alt="pens provided">
+                                <img class="hover" src="img/pensHover.svg" alt="pens provided">
+                                <img class="bannerLeft" src="img/bannerLeft.svg">
+                                <h4>Pens provided</h4>
+                                <img class="bannerRight" src="img/bannerRight.svg">
+                            </a>
+                        </div>
                     </div>
                     <div class="content">
                         <div class="explanation">
