--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="djs">
                                 <h5>with DJ sets from</h5>
-                                <h2><a href="#">P-Change</a> &amp; <a href="#">Jonny Leslie</a></h2>
+                                <h2><a href="http://www.mixcloud.com/p-change/">P-Change</a> &amp; <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a></h2>
                             </div>
                         </div>
                     </div>
