--- a/index.html
+++ b/index.html
@@ -48,82 +48,58 @@
                             </div>
                             <div class="djs">
                                 <h5>with DJ sets from</h5>
-                                <h2><a href="http://www.mixcloud.com/p-change/">P-Change</a> &amp; <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a></h2>
+                                <h2>
+                                    <a href="http://www.mixcloud.com/p-change/">P-Change</a> &amp; 
+                                    <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a>
+                                </h2>
                             </div>
                         </div>
-                    </div>
-                    <div class="graphics">
-                        <div class="graphic" id="bringYourOwn">
-                            <a href="#what">
+                        <div class="graphics">
+                            <div class="graphic" id="bringYourOwn">
+                                <a href="#what">
+                                    <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
+                                    <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
+                                    <img class="bannerLeft" src="img/bannerLeft.svg">
+                                    <h4>Tickets £3 in advance
+                                        <br>£4 on the door</h4>
+                                    <img class="bannerRight" src="img/bannerRight.svg">
+                                </a>
+                            </div>
+                            <div class="graphic" id="drinks">
+                                <a href="#drinksText">
+                                    <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
+                                    <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
+                                    <img class="bannerLeft" src="img/bannerLeft.svg">
+                                    <h4>Drinks from 99p</h4>
+                                    <img class="bannerRight" src="img/bannerRight.svg">
+                                </a>
+                            </div>
+                            <div class="graphic" id="pens">
+                                <a href="#pensText">
+                                    <img class="normal" src="img/pens.svg" alt="pens provided">
+                                    <img class="hover" src="img/pensHover.svg" alt="pens provided">
+                                    <img class="bannerLeft" src="img/bannerLeft.svg">
+                                    <h4>Pens provided</h4>
+                                    <img class="bannerRight" src="img/bannerRight.svg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <div class="explanation">
                                 <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
-                                <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
-                                <img class="bannerLeft" src="img/bannerLeft.svg">
-                                <h4>Tickets £3 in advance
-                                    <br>£4 on the door</h4>
-                                <img class="bannerRight" src="img/bannerRight.svg">
-                            </a>
-                        </div>
-                        <div class="graphic" id="drinks">
-                            <a href="#drinksText">
+                                <h3 id="what">What is plain white tees?</h3>
+                                <p>eruditionem e cillum litteris aut est quis quorum officia laborum et velit consectetur malis coniunctione ipsum si ad nam nisi arbitror culpa appellat despicationes arbitrantur arbitrantur proident quem fugiat magna ita aliqua qui esse quo vidisse iudicem imitarentur quorum quid aute quamquam ut quamquam relinqueret ex nescius sempiternum nam irure laborum quae quamquam litteris distinguantur concursionibus distinguantur expetendis ita velit nam cillum cillum laborum summis ne laborum nostrud quis ea an litteris quid ne ex quem despicationes se aut doctrina ipsum duis ea legam sempiternum litteris fugiat de arbitror e ullamco irure duis nostrud dolor de velit quis tractavissent eu</p>
+                            </div>
+                            <div class="explanation">
                                 <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
-                                <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
-                                <img class="bannerLeft" src="img/bannerLeft.svg">
-                                <h4>Drinks from 99p</h4>
-                                <img class="bannerRight" src="img/bannerRight.svg">
-                            </a>
-                        </div>
-                        <div class="graphic" id="pens">
-                            <a href="#pensText">
+                                <h3 id="drinksText">Bargain Prices</h3>
+                                <p>offendit coniunctione te iudicem mentitum do iudicem aute ea de adipisicing graviterque sed praetermissum noster transferrem malis voluptate graviterque graviterque graviterque voluptate quae o consectetur sunt probant vidisse labore id qui vidisse eiusmod mandaremus hic ubi eiusmod litteris labore id adipisicing domesticarum nam singulis arbitrantur sempiternum qui firmissimum malis laboris mentitum qui appellat sed ubi consequat voluptatibus doctrina malis cillum magna laboris doctrina aut relinqueret te despicationes ita ullamco firmissimum et philosophari sempiternum veniam firmissimum tamen velit summis nescius sed possumus deserunt sunt quis ea nam illum cernantur anim qui irure aute ex ne dolor fugiat irure consectetur senserit culpa</p>
+                            </div>
+                            <div class="explanation">
                                 <img class="normal" src="img/pens.svg" alt="pens provided">
-                                <img class="hover" src="img/pensHover.svg" alt="pens provided">
-                                <img class="bannerLeft" src="img/bannerLeft.svg">
-                                <h4>Pens provided</h4>
-                                <img class="bannerRight" src="img/bannerRight.svg">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <div class="explanation">
-                            <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
-                            <h3 id="what">What is plain white tees?</h3>
-                            
-                            <p>eruditionem e cillum litteris aut est quis quorum officia laborum et velit 
-                                consectetur malis coniunctione ipsum si ad nam nisi arbitror culpa appellat 
-                                despicationes arbitrantur arbitrantur proident quem fugiat magna ita aliqua qui 
-                                esse quo vidisse iudicem imitarentur quorum quid aute quamquam ut quamquam 
-                                relinqueret ex nescius sempiternum nam irure laborum quae quamquam litteris 
-                                distinguantur concursionibus distinguantur expetendis ita velit nam cillum 
-                                cillum laborum summis ne laborum nostrud quis ea an litteris quid ne ex quem 
-                                despicationes se aut doctrina ipsum duis ea legam sempiternum litteris fugiat de 
-                                arbitror e ullamco irure duis nostrud dolor de velit quis tractavissent eu</p>
-                        </div>
-                        <div class="explanation">
-                            <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
-                            <h3 id="drinksText">Bargain Prices</h3>
-                            <p>offendit coniunctione te iudicem mentitum do iudicem aute ea de adipisicing 
-                                graviterque sed praetermissum noster transferrem malis voluptate graviterque 
-                                graviterque graviterque voluptate quae o consectetur sunt probant vidisse labore 
-                                id qui vidisse eiusmod mandaremus hic ubi eiusmod litteris labore id adipisicing 
-                                domesticarum nam singulis arbitrantur sempiternum qui firmissimum malis laboris 
-                                mentitum qui appellat sed ubi consequat voluptatibus doctrina malis cillum magna 
-                                laboris doctrina aut relinqueret te despicationes ita ullamco firmissimum et 
-                                philosophari sempiternum veniam firmissimum tamen velit summis nescius sed 
-                                possumus deserunt sunt quis ea nam illum cernantur anim qui irure aute ex ne 
-                                dolor fugiat irure consectetur senserit culpa</p>
-                        </div>
-                        <div class="explanation">
-                            <img class="normal" src="img/pens.svg" alt="pens provided">
-                            <h3 id="pensText">Pens Provided</h3>
-                            <p>tractavissent hic iis exercitation iis aut tempor admodum despicationes dolor 
-                                minim appellat minim domesticarum quorum ne senserit te quae mentitum se se 
-                                doctrina multos legam tempor te se hic cillum veniam arbitrantur laboris nostrud 
-                                ingeniis aute possumus sunt comprehenderit esse et veniam expetendis possumus 
-                                fugiat voluptate laborum despicationes sempiternum iis ut sunt relinqueret nulla 
-                                id deserunt de tractavissent sed ullamco cillum do elit laboris voluptatibus 
-                                senserit do ita nostrud se aliqua aliquip cillum dolor ingeniis incurreret 
-                                instituendarum non minim pariatur consectetur a litteris graviterque quibusdam 
-                                appellat id quo adipisicing probant in esse cernantur pariatur tamen aliqua an 
-                                ipsum iis labore</p>
+                                <h3 id="pensText">Pens Provided</h3>
+                                <p>tractavissent hic iis exercitation iis aut tempor admodum despicationes dolor minim appellat minim domesticarum quorum ne senserit te quae mentitum se se doctrina multos legam tempor te se hic cillum veniam arbitrantur laboris nostrud ingeniis aute possumus sunt comprehenderit esse et veniam expetendis possumus fugiat voluptate laborum despicationes sempiternum iis ut sunt relinqueret nulla id deserunt de tractavissent sed ullamco cillum do elit laboris voluptatibus senserit do ita nostrud se aliqua aliquip cillum dolor ingeniis incurreret instituendarum non minim pariatur consectetur a litteris graviterque quibusdam appellat id quo adipisicing probant in esse cernantur pariatur tamen aliqua an ipsum iis labore</p>
+                            </div>
                         </div>
                     </div>
                     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
