--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
                             </div>
                             <div id="countdown"></div>
                             <div class="date">
-                                <img class="bannerLeft" src="img/bannerLeft.svg">
+                                    <img class= "bannerLeft" src="img/bannerLeft.svg">
                                 <h2>
                                     <span class="star">&#9733;</span>Thursday 7th November
                                     <span class="star">&#9733;</span>
+                                    <br>
                                     <span class="star">&#9733;</span>11pm - 2:30am
                                     <span class="star">&#9733;</span>
                                 </h2>
-                                <img class="bannerRight" src="img/bannerRight.svg">
+                                    <img class="bannerRight" src="img/bannerRight.svg">
                             </div>
                             <div class="djs">
                                 <h5>with DJ sets from</h5>
                                 <h2>
-                                    <a href="http://www.mixcloud.com/p-change/">P-Change</a> &amp; 
+                                    <a href="http://www.mixcloud.com/p-change/">P-Change</a>&nbsp;&amp;&nbsp;
                                     <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a>
                                 </h2>
                             </div>
