fucking bastard graphics dont fit

--- a/index.html
+++ b/index.html
@@ -27,32 +27,36 @@
                 <body>
                     <div class="wrap">
                         <div class="tophalf">
-                            <div class="unionLogos">
-                                <img src="img/fundraiser.svg" alt="fundraiser">
-                                <img src="img/union.svg" alt="The Union logo">
-                                <img src="img/mono.svg" alt="mono logo">
+                            <div class="leftCol">
+                                <div class="unionLogos">
+                                    <img src="img/fundraiser.svg" alt="fundraiser">
+                                    <img src="img/union.svg" alt="The Union logo">
+                                    <img src="img/mono.svg" alt="mono logo">
+                                </div>
+                                <div class="logo">
+                                    <img src="img/pwt-logo.svg" alt="Plain White Tees logo">
+                                </div>
                             </div>
-                            <div class="logo">
-                                <img src="img/pwt-logo.svg" alt="Plain White Tees logo">
-                            </div>
-                            <div id="countdown"></div>
-                            <div class="date">
-                                    <img class= "bannerLeft" src="img/bannerLeft.svg">
-                                <h2>
-                                    <span class="star">&#9733;</span>Thursday 7th November
-                                    <span class="star">&#9733;</span>
-                                    <br>
-                                    <span class="star">&#9733;</span>11pm - 2:30am
-                                    <span class="star">&#9733;</span>
-                                </h2>
+                            <div class="rightCol">
+                                <div id="countdown"></div>
+                                <div class="date">
+                                    <img class="bannerLeft" src="img/bannerLeft.svg">
+                                    <h2>
+                                        <span class="star">&#9733;</span>Thursday 7th November
+                                        <span class="star">&#9733;</span>
+                                        <br>
+                                        <span class="star">&#9733;</span>11pm - 2:30am
+                                        <span class="star">&#9733;</span>
+                                    </h2>
                                     <img class="bannerRight" src="img/bannerRight.svg">
-                            </div>
-                            <div class="djs">
-                                <h5>with DJ sets from</h5>
-                                <h2>
-                                    <a href="http://www.mixcloud.com/p-change/">P-Change</a>&nbsp;&amp;&nbsp;
-                                    <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a>
-                                </h2>
+                                </div>
+                                <div class="djs">
+                                    <h5>with DJ sets from</h5>
+                                    <h2>
+                                        <a href="http://www.mixcloud.com/p-change/">P-Change</a>&nbsp;&amp;&nbsp;
+                                        <a href="https://soundcloud.com/jonny-leslie">Jonny Leslie</a>
+                                    </h2>
+                                </div>
                             </div>
                         </div>
                         <div class="graphics">
