--- a/index.html
+++ b/index.html
@@ -60,33 +60,39 @@
                             </div>
                         </div>
                         <div class="graphics">
-                            <div class="graphic" id="bringYourOwn">
-                                <a href="#what">
-                                    <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
-                                    <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
-                                    <img class="bannerLeft" src="img/bannerLeft.svg">
-                                    <h4>Tickets £3 in advance
-                                        <br>£4 on the door</h4>
-                                    <img class="bannerRight" src="img/bannerRight.svg">
-                                </a>
+                            <div class="graphicWrap">
+                                <div class="graphic" id="bringYourOwn">
+                                    <a href="#what">
+                                        <img class="normal" src="img/bringYourOwn.svg" alt="Bring your own white tee">
+                                        <img class="hover" src="img/bringYourOwnHover.svg" alt="Bring your own white tee">
+                                        <img class="bannerLeft" src="img/bannerLeft.svg">
+                                        <h4>Tickets £3 in advance
+                                            <br>£4 on the door</h4>
+                                        <img class="bannerRight" src="img/bannerRight.svg">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="graphic" id="drinks">
-                                <a href="#drinksText">
-                                    <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
-                                    <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
-                                    <img class="bannerLeft" src="img/bannerLeft.svg">
-                                    <h4>Drinks from 99p</h4>
-                                    <img class="bannerRight" src="img/bannerRight.svg">
-                                </a>
+                            <div class="graphicWrap">
+                                <div class="graphic" id="drinks">
+                                    <a href="#drinksText">
+                                        <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
+                                        <img class="hover" src="img/drinksHover.svg" alt="Drinks from 99p">
+                                        <img class="bannerLeft" src="img/bannerLeft.svg">
+                                        <h4>Drinks from 99p</h4>
+                                        <img class="bannerRight" src="img/bannerRight.svg">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="graphic" id="pens">
-                                <a href="#pensText">
-                                    <img class="normal" src="img/pens.svg" alt="pens provided">
-                                    <img class="hover" src="img/pensHover.svg" alt="pens provided">
-                                    <img class="bannerLeft" src="img/bannerLeft.svg">
-                                    <h4>Pens provided</h4>
-                                    <img class="bannerRight" src="img/bannerRight.svg">
-                                </a>
+                            <div class="graphicWrap">
+                                <div class="graphic" id="pens">
+                                    <a href="#pensText">
+                                        <img class="normal" src="img/pens.svg" alt="pens provided">
+                                        <img class="hover" src="img/pensHover.svg" alt="pens provided">
+                                        <img class="bannerLeft" src="img/bannerLeft.svg">
+                                        <h4>Pens provided</h4>
+                                        <img class="bannerRight" src="img/bannerRight.svg">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="content">
