--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <head>
                     <meta charset="utf-8">
                     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+                    <link rel="shortcut icon" href="favicon.gif">
                     <title>Plain White Tees: 07/10/2013</title>
                     <meta name="description" content="">
                     <meta name="viewport" content="width=device-width">
