--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
                     <link rel="stylesheet" href="style.css">
                     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+                    <meta property="og:url" content="http:/socialdigital.dundee.ac.uk/plainwhitetees/" />
+                    <meta property="og:title" content="Plain White Tees|07/10/2013|Social Digital" />
+                    <meta property="og:description" content="Social Digital 2013 fundraiser: come and draw on your friends and make some new ones!" />
+                    <meta property="og:image" content="pwtOG.png" />
                 </head>
                 
                 <body>
