--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <meta property="og:url" content="http:/socialdigital.dundee.ac.uk/plainwhitetees/" />
                     <meta property="og:title" content="Plain White Tees|07/10/2013|Social Digital" />
                     <meta property="og:description" content="Social Digital 2013 fundraiser: come and draw on your friends and make some new ones!" />
-                    <meta property="og:image" content="pwtOG.png" />
+                    <meta property="og:image" content="http:/socialdigital.dundee.ac.uk/plainwhitetees/pwtOG.png" />
                 </head>
                 
                 <body>
