--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="explanation">
                                 <img class="normal" src="img/drinks.svg" alt="Drinks from 99p">
                                 <h3 id="drinksText">Bargain Prices</h3>
-                                <p>The event is at Dundee University Students Union, with some of the cheapest entry prices and drinks in town! It's SAAS day so there is no excuse not to come out and spend your hard earned loan. Drinks start from just 99p. Advance tickets are just £3 in advance, available from the PR team, the Premier union shop, and <a href="http://theunion.fatsoma.com/events/96724/">online</a>, but they're £4 on the door so make sure you buy in advance. That extra pound is one more drink on the night and who can say no to just one more drink?</p>
+                                <p>The event is at Dundee University Students Union, with some of the cheapest entry prices and drinks in town! It's SAAS day so there is no excuse not to come out and spend your hard earned loan. Drinks start from just 99p. Tickets are just £3 in advance, available from the PR team, the Premier union shop, and <a href="http://theunion.fatsoma.com/events/96724/">online</a>, but they're £4 on the door so make sure you buy in advance. That extra pound is one more drink on the night and who can say no to just one more drink?</p>
                             </div>
                             <div class="explanation">
                                 <img class="normal" src="img/pens.svg" alt="pens provided">
